# gitspect

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  github_api.rs  main.rs  schemas.rs  subcommands.rs  utils.rs
src/commands/: branches.rs  commits.rs  contributors.rs  help.rs  key.rs  lang.rs  mod.rs  open.rs  readme.rs  stats.rs
src/utils/: formatting.rs  info_display.rs  mod.rs  parsing.rs
