[package]
name = "gitspect"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-macros = "2.5.0"
